# spec-forge

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/commands/: specforge.distill.md
.specify/memory/: constitution.md
scripts/bash/: check-prerequisites.sh  common.sh  create-feature.sh  inventory-inbox.sh  setup-requirements.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-feature.ps1  setup-requirements.ps1
specs/001-specforge-requirements-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-specforge-requirements-engine/checklists/: requirements.md
specs/001-specforge-requirements-engine/contracts/: script-interfaces.md  skill-interfaces.md
specs/002-signal-generation-pipeline/: spec.md
specs/002-signal-generation-pipeline/checklists/: requirements.md
src/specforge_cli/: __init__.py
templates/: CLAUDE-template.md  feature-includes.md  feature-readiness.md  feature-requirement.md  feature-sources.md  synthesis-template.md  unit-template.md
templates/commands/: specforge.clarify.md  specforge.compose.md  specforge.distill.md  specforge.prepare.md  specforge.status.md
tests/fixtures/expected-outputs/: UNIT-001.md  overview.md
tests/fixtures/expected-outputs/feature-blocked/: readiness.md
tests/fixtures/expected-outputs/feature-needs-refinement/: readiness.md
tests/fixtures/expected-outputs/feature-ready/: includes.md  readiness.md  requirement.md  sources.md
tests/fixtures/sample-inbox/: braindump.txt  meeting-notes.md  prd-fragment.md
