[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specforge-cli"
version = "0.1.0"
description = "Pre-specification requirements engine — transform unstructured inputs into structured, traceable feature specs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Martin" },
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.scripts]
specforge = "specforge_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/specforge_cli"]

[tool.hatch.build.targets.wheel.force-include]
"scripts" = "specforge_cli/bundled/scripts"
"templates" = "specforge_cli/bundled/templates"
